--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Test": " Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=testDB;Integrated Security=True;"
+  }
+
 }
