--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Test": " Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=testDB;Integrated Security=True;"
+    "Test": "Server=localhost; Database=test1; User Id=SA; Password=Mal1celebi.; TrustServerCertificate=True; Encrypt=false",
+    "WebApplication1IdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebApplication1;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
-
 }
