--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Test": "Server=localhost; Database=test1; User Id=SA; Password=Mal1celebi.; TrustServerCertificate=True; Encrypt=false",
-    "WebApplication1IdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebApplication1;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+    "Test": "Server=(localdb)\\mssqllocaldb;Database=WebApplication1;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
